--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -388,7 +388,7 @@
     <Content Include="Areas\Business\Css\images\no.png" />
     <Content Include="Areas\Business\Css\images\ok.png" />
     <Content Include="Areas\Business\Css\images\one-blue.png" />
-    <Content Include="Areas\Business\Css\images\person_info_edit.png" />
+    <Content Include="Areas\Business\Css\images\person_info_edit1.png" />
     <Content Include="Areas\Business\Css\images\qqbd.png" />
     <Content Include="Areas\Business\Css\images\qqtx.png" />
     <Content Include="Areas\Business\Css\images\qqyz_close.png" />
