--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -157,7 +157,7 @@
     <Content Include="Areas\Business\Css\BZZX\BZZX_SY_ZDJS.css" />
     <Content Include="Areas\Business\Css\BZZX\BZZX_SY_ZHMM.css" />
     <Content Include="Areas\Business\Css\BZZX\BZZX_WZJY.css" />
-    <Content Include="Areas\Business\Css\Common\CXCommon.css" />
+    <Content Include="Areas\Business\Css\CXLB\CXCommon.css" />
     <Content Include="Areas\Business\Css\Common\Head.css" />
     <Content Include="Areas\Business\Css\Common\CXLB_Common.css" />
     <Content Include="Areas\Business\Css\CXLB\CLFWCX.css" />
