--- a/android_app/app/build.gradle
+++ b/android_app/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile files('libs/android-support-v7-gridlayout.jar')
     compile files('libs/android-support-v7-mediarouter.jar')
     compile files('libs/android-support-v7-palette.jar')
+    compile files('libs/org.apache.http.legacy.jar')
 }
