--- a/android_app/app/build.gradle
+++ b/android_app/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile files('libs/android-support-v7-mediarouter.jar')
     compile files('libs/android-support-v7-palette.jar')
     compile files('libs/org.apache.http.legacy.jar')
+    compile files('libs/ksoap2-android-2.5.2.jar')
 }
