--- a/android_app/app/build.gradle
+++ b/android_app/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile files('libs/android-support-v7-palette.jar')
     compile files('libs/org.apache.http.legacy.jar')
     compile files('libs/ksoap2-android-2.5.2.jar')
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
