--- a/android_app/app/src/main/AndroidManifest.xml
+++ b/android_app/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".YHZCActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +25,10 @@
         </activity>
         <activity
             android:name=".YHDLActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".YHZCActivity"
             android:label="@string/app_name" >
         </activity>
     </application>
