--- a/android_app/app/build.gradle
+++ b/android_app/app/build.gradle
@@ -36,4 +36,7 @@ dependencies {
     compile files('libs/org.apache.http.legacy.jar')
     compile files('libs/ksoap2-android-2.5.2.jar')
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile files('libs/httpmime-4.1.3.jar')
+    compile files('libs/Baidu_Mtj_3.7.5.4.jar')
+    compile files('libs/locSDK_6.22.jar')
 }
