--- a/android_app/app/build.gradle
+++ b/android_app/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId "com.example.administrator.infotownletsecond"
         minSdkVersion 15
@@ -17,6 +17,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dexOptions {
+    }
 }
 
 dependencies {
@@ -26,13 +28,6 @@ dependencies {
     })
     compile 'com.android.support:design:25.+'
     testCompile 'junit:junit:4.12'
-    compile files('libs/android-support-annotations.jar')
-    compile files('libs/android-support-design.jar')
-    compile files('libs/android-support-v7-appcompat.jar')
-    compile files('libs/android-support-v7-cardview.jar')
-    compile files('libs/android-support-v7-gridlayout.jar')
-    compile files('libs/android-support-v7-mediarouter.jar')
-    compile files('libs/android-support-v7-palette.jar')
     compile files('libs/org.apache.http.legacy.jar')
     compile files('libs/ksoap2-android-2.5.2.jar')
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
