--- a/android_app/app/src/main/AndroidManifest.xml
+++ b/android_app/app/src/main/AndroidManifest.xml
@@ -73,7 +73,9 @@
         <activity android:name=".SY_SWFWActivity" />
         <activity android:name=".SY_ESWPActivity" />
         <activity android:name=".SY_ZPActivity" />
-        <activity android:name=".SY_JZActivity"></activity>
+        <activity android:name=".SY_JZActivity" />
+        <activity android:name=".SY_ESCActivity" />
+        <activity android:name=".SY_XCActivity"></activity>
     </application>
 
 </manifest>
