--- a/TianWen.XiaoZhen1Qu.Web/DataSources.config
+++ b/TianWen.XiaoZhen1Qu.Web/DataSources.config
@@ -22,7 +22,7 @@
   <DataSource>
     <Name>Default</Name>
     <SourceType>MySql</SourceType>
-    <ConnectionString>Server=localhost;Port=3306;Database=915fl;User ID=root;Password=admin;CharSet=utf8</ConnectionString>
+    <ConnectionString>Server=localhost;Port=3306;Database=infotownlet;User ID=root;Password=admin;CharSet=utf8</ConnectionString>
     <DbHelpType>OleDbHelp</DbHelpType>
     <Attribures>
       <string>DataSourceDirection=Source</string>
