--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -127,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Business\Aspx\png.aspx" />
+    <Content Include="Areas\Business\Css\BZZX\BZZX_GYWM.css" />
     <Content Include="Areas\Business\Css\BZZX\BZZX.css" />
     <Content Include="Areas\Business\Css\BZZX\BZZX_QYXY.css" />
     <Content Include="Areas\Business\Css\BZZX\BZZX_LXKF.css" />
@@ -2869,6 +2870,7 @@
     <Content Include="Areas\Business\Views\LYJD\LYJD_CJY.cshtml" />
     <Content Include="Areas\Business\Views\LYJDCX\LYJDCX_CJY.cshtml" />
     <Content Include="Areas\Business\Views\BZZX\BZZX_QYXY.cshtml" />
+    <Content Include="Areas\Business\Views\BZZX\BZZX_GYWM.cshtml" />
     <None Include="Areas\Business\Views\SHFWXX\SHFWXX_ESHS.cshtml" />
     <Content Include="packages.config" />
     <None Include="Properties\PublishProfiles\xxxz.pubxml" />
