--- a/android_app/app/build.gradle
+++ b/android_app/app/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion '25.0.3'
+    aaptOptions.cruncherEnabled = false//这两行代码意思是禁止gradle检查png的合法性
+    aaptOptions.useNewCruncher = false//这两行代码意思是禁止gradle检查png的合法性
     defaultConfig {
         applicationId "com.example.administrator.infotownletsecond"
         minSdkVersion 15
