--- a/android_app/app/src/main/AndroidManifest.xml
+++ b/android_app/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".SY_MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -59,7 +59,7 @@
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="w7NQOKL8SpxHrs6lixBNoe90" />
 
-        <activity android:name=".GRZXActivity" />
+        <activity android:name=".GRZX_MainActivity" />
         <activity android:name=".FBActivity" />
         <activity android:name=".XXActivity" />
         <activity android:name=".SY_ZFActivity" />
