--- a/android_app/app/build.gradle
+++ b/android_app/app/build.gradle
@@ -21,18 +21,21 @@ android {
     }
     //在layout文件夹下建立子文件夹
     sourceSets {
-        main{
+        main {
             res.srcDirs = [
                     'src/main/res',
                     'src/main/res/layout',
                     'src/main/res/layout/lbxz',
                     'src/main/res/layout/lbcx',
+                    'src/main/res/layout/fbxx',
                     'src/main/res/drawable',
                     'src/main/res/drawable/lbxz',
                     'src/main/res/drawable/lbcx',
+                    'src/main/res/drawable/fbxx',
                     'src/main/res/values',
                     'src/main/res/values/lbxz',
-                    'src/main/res/values/lbcx'
+                    'src/main/res/values/lbcx',
+                    'src/main/res/values/fbxx'
             ]
         }
     }
