--- a/android_app/app/src/main/AndroidManifest.xml
+++ b/android_app/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.administrator.Public">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.administrator.Public">
+
     <!-- To auto-complete the email text field in the yhdl form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
@@ -32,23 +34,37 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="LBCX.SY_Main" android:label="@string/app_name">
+        <activity
+            android:name="LBCX.SY_Main"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
+        <service
+            android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":remote" />
 
-        <service android:name="com.baidu.location.f" android:enabled="true" android:process=":remote" />
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="w7NQOKL8SpxHrs6lixBNoe90" />
 
-        <meta-data android:name="com.baidu.lbsapi.API_KEY" android:value="w7NQOKL8SpxHrs6lixBNoe90" />
-
-        <activity android:name="COMMON.YHDL" android:label="@string/app_name" />
-        <activity android:name="COMMON.YHZC" android:label="@string/app_name" />
+        <activity
+            android:name="COMMON.YHDL"
+            android:label="@string/app_name" />
+        <activity
+            android:name="COMMON.YHZC"
+            android:label="@string/app_name" />
         <activity android:name="COMMON.GRZX_Main" />
         <activity android:name="COMMON.XX_Main" />
-        <activity android:name="COMMON.Base" android:label="@string/title_activity_base" android:theme="@style/AppTheme" />
+        <activity
+            android:name="COMMON.Base"
+            android:label="@string/title_activity_base"
+            android:theme="@style/AppTheme" />
         <activity android:name="COMMON.GRZX_WDFB" />
         <activity android:name="LBXZ.FB_Main" />
         <activity android:name="LBCX.SY_ZF" />
@@ -75,6 +91,8 @@
         <activity android:name="LBXZ.FB_LYJD" />
         <activity android:name="LBXZ.FB_NLMY" />
         <activity android:name="LBXZ.FB_SHFW" />
+        <activity android:name="FBXX.FC.FB_FC_ZZ" />
+        <activity android:name="FBXX.FC.FB_FC_XQCX"></activity>
     </application>
 
 </manifest>
