--- a/android_app/app/src/main/AndroidManifest.xml
+++ b/android_app/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.administrator.Public">
 
-    <!-- To auto-complete the email text field in the yhdl form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -24,6 +23,10 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!-- 访问网络，网络定位需要上网 -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- 授予该程序使用摄像头的权限 -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <!-- 授予该程序使用读取文件的权限 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <!-- SD卡读取权限，用户写入离线定位数据 -->
     <!-- <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" /> -->
@@ -34,9 +37,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name="LBCX.SY_Main"
-            android:label="@string/app_name">
+        <activity android:name="LBCX.SY_Main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -53,17 +54,12 @@
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="w7NQOKL8SpxHrs6lixBNoe90" />
 
-        <activity
-            android:name="COMMON.YHDL"
-            android:label="@string/app_name" />
-        <activity
-            android:name="COMMON.YHZC"
-            android:label="@string/app_name" />
+        <activity android:name="COMMON.YHDL" />
+        <activity android:name="COMMON.YHZC" />
         <activity android:name="COMMON.GRZX_Main" />
         <activity android:name="COMMON.XX_Main" />
         <activity
             android:name="COMMON.Base"
-            android:label="@string/title_activity_base"
             android:theme="@style/AppTheme" />
         <activity android:name="COMMON.GRZX_WDFB" />
         <activity android:name="LBXZ.FB_Main" />
@@ -99,7 +95,10 @@
         <activity android:name="FBXX.FC.FB_FC_ZJBHFY" />
         <activity android:name="FBXX.FC.FB_FC_LXRSF" />
         <activity android:name="FBXX.FC.FB_FC_LXRLXDH" />
-        <activity android:name="FBXX.FC.FB_FC_CWDT"></activity>
+        <activity android:name="FBXX.FC.FB_FC_CWDT" />
+        <activity android:name="COMMON.EditPicture" />
+        <activity android:name="COMMON.SelectPicture" />
+        <activity android:name="COMMON.ShowPicture"></activity>
     </application>
 
 </manifest>
