--- a/android_app/app/build.gradle
+++ b/android_app/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     compile files('libs/httpmime-4.1.3.jar')
     compile files('libs/Baidu_Mtj_3.7.5.4.jar')
     compile files('libs/locSDK_6.22.jar')
+    compile files('libs/fastjson-1.2.2.jar')
 }
