--- a/android_app/app/src/main/AndroidManifest.xml
+++ b/android_app/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.administrator.Public">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.administrator.Public">
+
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -25,8 +27,9 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <!-- 授予该程序使用读取文件的权限 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <!-- SD卡读取权限，用户写入离线定位数据 -->
-     <!--<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />-->
+    <!-- <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" /> -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -37,19 +40,27 @@
         <activity android:name="LBCX.SY_Main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <service android:name="com.baidu.location.f" android:enabled="true" android:process=":remote" />
+        <service
+            android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":remote" />
 
-        <meta-data android:name="com.baidu.lbsapi.API_KEY" android:value="w7NQOKL8SpxHrs6lixBNoe90" />
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="w7NQOKL8SpxHrs6lixBNoe90" />
 
         <activity android:name="Common.YHDL" />
         <activity android:name="Common.YHZC" />
         <activity android:name="Common.GRZX_Main" />
         <activity android:name="Common.XX_Main" />
-        <activity android:name="Common.Base" android:theme="@style/AppTheme" />
+        <activity
+            android:name="Common.Base"
+            android:theme="@style/AppTheme" />
         <activity android:name="Common.GRZX_WDFB" />
         <activity android:name="LBXZ.FB_Main" />
         <activity android:name="LBCX.SY_ZF" />
@@ -78,7 +89,9 @@
         <activity android:name="LBXZ.FB_SHFW" />
         <activity android:name="FBXX.FC.FB_FC_XQCX" />
         <activity android:name="FBXX.FC.FB_FC_MJ" />
-        <activity android:name="FBXX.FC.FB_FC_FWQK" android:launchMode="singleInstance" />
+        <activity
+            android:name="FBXX.FC.FB_FC_FWQK"
+            android:launchMode="singleInstance" />
         <activity android:name="FBXX.FC.FB_FC_ZJ" />
         <activity android:name="FBXX.FC.FB_FC_ZJBHFY" />
         <activity android:name="FBXX.FC.FB_FC_LXRSF" />
@@ -87,8 +100,27 @@
         <activity android:name="Common.EditPicture" />
         <activity android:name="Common.SelectPicture" />
         <activity android:name="Common.ShowPicture" />
-        <activity android:name="FBXX.FC.FB_FC_ZZ" android:launchMode="singleInstance" />
-        <activity android:name="FBXX.FC.FB_FC_ZZ2" android:launchMode="singleInstance" />
-        <activity android:name="FBXX.FC.FB_FC_RZXX"></activity>
+        <activity
+            android:name="FBXX.FC.FB_FC_ZZ"
+            android:launchMode="singleInstance" />
+        <activity
+            android:name="FBXX.FC.FB_FC_ZZ2"
+            android:launchMode="singleInstance" />
+        <activity android:name="FBXX.FC.FB_FC_RZXX" />
+        <activity
+            android:name="FBXX.FC.FB_FC_HZ"
+            android:launchMode="singleInstance" />
+        <activity android:name="FBXX.FC.FB_FC_HXLC" />
+        <activity android:name="FBXX.FC.FB_FC_LXCX" />
+        <activity
+            android:name="FBXX.FC.FB_FC_HZ2"
+            android:launchMode="singleInstance" />
+        <activity android:name="FBXX.FC.FB_FC_FWPZ" />
+        <activity android:name="FBXX.FC.FB_FC_ZKYQ" />
+        <activity android:name="FBXX.FC.FB_FC_FWMS" />
+        <activity android:name="FBXX.FC.FB_FC_ESF" />
+        <activity android:name="FBXX.FC.FB_FC_ESF_LXGN" />
+        <activity android:name="FBXX.FC.FB_FC_ESF_CQZX"></activity>
     </application>
+
 </manifest>
